--- a/src/app/pages/school/students/student-registration/student-registration.component.html
+++ b/src/app/pages/school/students/student-registration/student-registration.component.html
@@ -6,10 +6,11 @@
             <div class="card-header border-bottom-dashed">
                 <div class="row g-4 align-items-center">
                     <div class="col-sm">
-                        <div><h5 class="card-title mb-0"><i class="ri-user-add-line text-muted fs-18 align-middle me-1">     </i>Student Registration</h5></div>
+                        <div><h5 class="card-title mb-0"><i class="ri-user-add-line text-muted fs-18 align-middle me-1">     </i>Registration</h5></div>
                     </div>
                     <div class="col-sm-auto">
                         <div class="d-flex flex-wrap align-items-start gap-2">
+                            <button [disabled]="selectedStudentIds.length < 1" type="button" class="btn btn-info" (click)="enrollModal(enrollmentContent)"><i class="ri-swap-box-line align-bottom me-1"></i> Enroll Students</button>
                             <button type="button" class="btn btn-primary add-btn" data-bs-toggle="modal" id="create-btn" data-bs-target="#showModal" (click)="addModal(content)"><i class="ri-user-add-line align-bottom me-1"></i> Register Student</button>
                             <button type="button" class="btn btn-success" (click)="addBatchModal(content)"><i class="ri-file-excel-2-line align-bottom me-1"></i> Import Students</button>
                         </div>
@@ -136,7 +137,7 @@
                                             <div class="mb-3">
                                                 <label class="form-label mb-0">Auto Enroll <span class="text-danger">*</span></label>
                                                 <select class="form-select" aria-label=".form-select-sm" formControlName="autoEnroll" [ngClass]="{ 'is-invalid': submitted && fEnrollment['autoEnroll'].invalid }">
-                                                    <option selected [ngValue]="null">Select status</option>
+                                                    <option selected [ngValue]="null">Select Option</option>
                                                     <option [ngValue]="true">Yes</option>
                                                     <option [ngValue]="false">No</option>
                                                 </select>
@@ -154,8 +155,7 @@
                                             </div>
                                             <div class="mb-3">
                                                 <label class="form-label">Class Section</label>
-                                                <ng-select [items]="classSections" bindLabel="name" id="classSections" bindValue="id" formControlName="classSectionId" placeholder="Select Class Section" [ngClass]="{ 'is-invalid': submitted && fEnrollment['classSectionId'].invalid }"></ng-select>
-                                                <div class="invalid-feedback">Please select a class section</div>
+                                                <ng-select [items]="classSections" bindLabel="name" id="classSections" bindValue="id" formControlName="classSectionId" placeholder="Select Class Section"></ng-select>
                                             </div>
                                         </div>
                                     </form>
@@ -177,4 +177,38 @@
             </div>
         </div>
     </ng-template>
+
+    <ng-template #enrollmentContent role="document" let-modal>
+        <div class="modal-header p-3 bg-light">
+            <h5 class="modal-title" id="modalLabel">Enroll {{selectedStudentIds.length}} Selected Student(s)</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" id="close-modal" (click)="dismissModal()"></button>
+        </div>
+        <form autocomplete="off" class="tablelist-form" [formGroup]="enrollmentForm" (submit)="enrollSelectedStudents()">
+            <div class="modal-body">
+                <div class="mb-0">
+                    <div class="mb-3">
+                        <label class="form-label">Class</label>
+                        <ng-select [items]="classes" bindLabel="name" id="class" bindValue="id" formControlName="classId" placeholder="Select Class" [ngClass]="{ 'is-invalid': submitted && fEnrollment['classId'].invalid }"></ng-select>
+                        <div class="invalid-feedback">Please select a class</div>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Class Section</label>
+                        <ng-select [items]="classSections" bindLabel="name" id="classSections" bindValue="id" formControlName="classSectionId" placeholder="Select Class Section"></ng-select>
+                    </div>
+                    <div class="mb-3">
+                        <label class="form-label">Academic Year</label>
+                        <ng-select [items]="academicYears" bindLabel="name" id="academicYear" bindValue="id" formControlName="academicYearId" placeholder="Select Academic Year" [ngClass]="{ 'is-invalid': submitted && fEnrollment['academicYearId'].invalid }"></ng-select>
+                        <div class="invalid-feedback">Please select an academic term</div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <div class="hstack gap-2 justify-content-end">
+                    <button type="button" class="btn btn-light" data-bs-dismiss="modal" (click)="dismissModal()">Close</button>
+                    <button type="submit" class="btn btn-primary" (click)="onSubmitStudent()" id="add-btn">Save</button>
+                </div>
+            </div>
+        </form>
+    </ng-template>
+
 </div>
