--- a/src/app/shared/generic-app-table/generic-app-table.component.html
+++ b/src/app/shared/generic-app-table/generic-app-table.component.html
@@ -52,6 +52,11 @@
                             </div>
                         </td>
                     </tr>
+                    <tr *ngIf="data.length === 0">
+                        <td [attr.colspan]="headers.length + (showRowSelect ? 2 : 1) + (showActions ? 1 : 0)" class="text-center py-3">
+                            No records found
+                        </td>
+                    </tr>
                 </tbody>
             </table>
         </div>
